# phiStar

./: Cargo.toml  notes.md
firmware/: Cargo.toml
pager-firmware/: Cargo.toml
phistar-base-firmware/: Cargo.toml
phistar-pager-firmware/: Cargo.toml
phistar-pager-firmware/src/: main.rs  radio.rs
phistar-radio/: Cargo.toml
phistar-radio/src/: config_options.rs  constants.rs  lib.rs
